With the infinite timeline, clicking the Previous / Next month button in the sidebar jumps by ±5 weeks based on the current day, instead of clamping to the month's "day 1"
This is a small UX regression I did not notice when testing:
- Scroll to the middle of the month so that something other than the 1st week is aligned to the top (if not already the case, if today happens to not be on the 1st week of the month)
- Click the Previous/Next month buttons in the sidebar's minicalendar, or use the
PgUp
/PgDown
keyboard shortcuts
Results: The new month view jumps forward by the number of rows (currently 5), without regards to the notion of month.
Expected results:
- When specifically asking to switch to the previous/next month, instead of using infinite scrolling, most users (including me) will expect the view to clamp/align to the 1st day/week of the previous/next month, so don't jump exactly 5 weeks, jump to the 1st day of the previous/next month.
- When you are in a previous/next month and click those buttons (or shortcuts) to go back to the current month, I think it would still be expected to clamp to the 1st day of the month, instead of "Today". If the user wanted to align/clamp to "Today", they can/should click the "Today" button.