views/month: Jump to first day of month with PgUp/PgDown

With this we always jump to the first day of the next/previous month
when pressing the PgDown/PgUp key in the month view.

Partially fixes the regression described in
https://gitlab.gnome.org/GNOME/gnome-calendar/-/issues/1103

Co-authored-by: Maximiliano Sandoval <msandova@gnome.org>
Part-of: <https://gitlab.gnome.org/GNOME/gnome-calendar/-/merge_requests/369>